Add React Query for data fetching and integrate FastImage for optimized image loading. Update DownloadButton to support dynamic sizes and enhance SongDetailsScreen with download functionality. Include new button size in constants and improve UI responsiveness in SongListScreen.

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -23,6 +23,9 @@ target 'SongDL' do
     :app_path => "#{Pod::Config.instance.installation_root}/.."
   )
 
+  # Add SDWebImageSVGCoder for react-native-fast-image
+  pod 'SDWebImageSVGCoder'
+
   post_install do |installer|
     react_native_post_install(
       installer,
