--- a/package.json
+++ b/package.json
@@ -10,10 +10,15 @@
     "test": "jest"
   },
   "dependencies": {
+    "@d11/react-native-fast-image": "^8.13.0",
     "@react-navigation/native": "^7.1.20",
     "@react-navigation/native-stack": "^7.6.3",
+    "@shopify/flash-list": "^2.2.0",
+    "@tanstack/react-query": "^5.90.10",
+    "axios": "^1.13.2",
     "react": "19.1.1",
     "react-native": "0.82.1",
+    "react-native-config": "^1.6.0",
     "react-native-gesture-handler": "^2.29.1",
     "react-native-safe-area-context": "^5.5.2",
     "react-native-screens": "^4.18.0",
@@ -37,6 +42,7 @@
     "jest": "^29.6.3",
     "prettier": "2.8.8",
     "react-test-renderer": "19.1.1",
+    "reactotron-react-native": "^5.1.18",
     "typescript": "^5.8.3"
   },
   "engines": {
