--- a/package.json
+++ b/package.json
@@ -16,13 +16,20 @@
     "@shopify/flash-list": "^2.2.0",
     "@tanstack/react-query": "^5.90.10",
     "axios": "^1.13.2",
+    "immer": "^10.2.0",
+    "moment": "^2.30.1",
     "react": "19.1.1",
     "react-native": "0.82.1",
+    "react-native-blob-util": "^0.23.2",
     "react-native-config": "^1.6.0",
+    "react-native-device-info": "^15.0.1",
+    "react-native-file-viewer": "^2.1.5",
     "react-native-gesture-handler": "^2.29.1",
+    "react-native-permissions": "^5.4.4",
     "react-native-safe-area-context": "^5.5.2",
     "react-native-screens": "^4.18.0",
-    "react-native-svg": "^15.15.0"
+    "react-native-svg": "^15.15.0",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
